--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         </div>
     </aside>
     <section id="map"></section>
-    <script src="js/jquery.min.js"></script>
-    <script src="js/knockout.js"></script>
-    <script async src="https://maps.googleapis.com/maps/api/js?libraries=places,geometry,drawing&key=AIzaSyD8-Remi8efHedF6YYqHpeLb4NvrGpBxd4&callback=init_map"></script>
-    <script src="js/app.js"></script>
+    <script defer src="js/jquery.min.js"></script>
+    <script defer src="js/knockout.js"></script>
+    <script defer src="js/app.js"></script>
+    <script defer src="https://maps.googleapis.com/maps/api/js?libraries=places,geometry,drawing&key=AIzaSyD8-Remi8efHedF6YYqHpeLb4NvrGpBxd4&callback=init_map_with_delay"></script>
 </body>
 
 </html>
