Changes made:     - Add css when a certain restaurant is selected in the list.     - Add trigger to marker animation when the name of the restaurant       is selected in the list.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         </div>
         <div class="restaurant-list-container">
             <ul class="restaurant-list" data-bind="foreach: restaurant_list">
-                <li data-bind="text: name"></li>
+                <li data-bind="text: name, click: $parent.set_current_restaurant, css: {selected: selected() == true}"></li>
             </ul>
         </div>
     </aside>
