--- a/index.html
+++ b/index.html
@@ -2,13 +2,20 @@
 
 <head>
     <title>My Neighborhood Map</title>
+    <meta charset="utf-8">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/jquery-ui.min.css">
 </head>
 
 <body>
     <aside>
         <div class="control-container">
-            <input type="text" placeholder="Search Restaurant">
+            <p>Category:</p>
+            <select id="cuisine-list" data-bind="options: cuisine_list"></select>
+            <p>Price Range:</p>
+            <div id="price-slider">
+                <div id="custom-handle" class="ui-slider-handle"></div>
+            </div>
         </div>
         <div class="restaurant-list-container">
             <ul class="restaurant-list" data-bind="foreach: restaurant_list">
@@ -18,6 +25,7 @@
     </aside>
     <section id="map"></section>
     <script defer src="js/jquery.min.js"></script>
+    <script defer src="js/jquery-ui.min.js"></script>
     <script defer src="js/knockout.js"></script>
     <script defer src="js/app.js"></script>
     <script defer src="https://maps.googleapis.com/maps/api/js?libraries=places,geometry,drawing&key=AIzaSyD8-Remi8efHedF6YYqHpeLb4NvrGpBxd4&callback=init_map_with_delay"></script>
