Changes made:     - Make the filters work

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
             <div id="price-slider">
                 <div id="custom-handle" class="ui-slider-handle"></div>
             </div>
+            <a id="search" href="#">Search</a>
+            <a id="show-all" href="#">Show All</a>
         </div>
         <div class="restaurant-list-container">
             <ul class="restaurant-list" data-bind="foreach: restaurant_list">
