Changes made:     - Add significant comments

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <aside>
         <div class="control-container">
             <p>Category:</p>
-            <select id="cuisine-list" data-bind="options: cuisine_list"></select>
+            <select id="category-list" data-bind="options: category_list"></select>
             <p>Price Range:</p>
             <div id="price-slider">
                 <div id="custom-handle" class="ui-slider-handle"></div>
