--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>My Neighborhood Map</title>
+    <title>Restaurant Finder</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/styles.css">
@@ -15,6 +15,13 @@
     </header>
     <main>
         <aside>
+            <div class="location-container">
+                <p>Find Restaurants in:</p>
+                <input type="text" placeholder="Type name of the city" id="city_autocomplete">
+                <select id="country-list" data-bind="options: country_list, 
+                                                    optionsText: 'name',
+                                                    optionsValue: 'code'" ,></select>
+            </div>
             <div class="control-container">
                 <p>Category:</p>
                 <select id="category-list" data-bind="options: category_list"></select>
@@ -38,7 +45,7 @@
     <script defer src="js/jquery.ui.touch-punch.min.js"></script>
     <script defer src="js/knockout.js"></script>
     <script defer src="js/app.js"></script>
-    <script defer src="https://maps.googleapis.com/maps/api/js?libraries=places,geometry,drawing&key=AIzaSyD8-Remi8efHedF6YYqHpeLb4NvrGpBxd4&callback=init_map_with_delay"></script>
+    <script defer src="https://maps.googleapis.com/maps/api/js?libraries=places,geometry&key=AIzaSyD8-Remi8efHedF6YYqHpeLb4NvrGpBxd4&callback=init_map_with_delay"></script>
 </body>
 
 </html>
