Changes made:     - Create a functionality that converts PHP cost filter to other     country's currencies.         * Create a list of currencies from list of countries that         Zomato supports.         * Set currency when user selects/provides a location.         * Use third-party API to convert currencies apart from PHP.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                     <label for="country-list">Country:</label>
                     <select id="country-list" data-bind="options: country_list, 
                                                     optionsText: 'name',
-                                                    optionsValue: 'code'" ,></select>
+                                                    optionsValue: 'code',
+                                                    optionsCaption: 'Choose a country'" ,></select>
                     <br><br>
                     <label for="city_autocomplete">City: </label>
                     <input type="text" id="city_autocomplete">
