Changes made:     * app.js rework pt.6         - Make marker a property of Restaurant object.         - Refactor how the website displays the search/show all         restaurants and markers.         - Satisfy the suggestions for the following functions:             > find_marker()             > search_restaurants()

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 </div>
                 <div class="open restaurant-canvas" id="restaurant">
                     <ul class="restaurant-list" data-bind="foreach: restaurant_list">
-                        <li data-bind="text: name, click: $parent.set_current_restaurant, css: {selected: selected()}"></li>
+                        <li data-bind="text: name, click: $parent.set_current_restaurant, css: {selected: selected()}, visible: displayed"></li>
                     </ul>
                 </div>
             </section>
