--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                                                                                                                             let handle = $('#custom-handle');
                                                                                                                             handle.text(`₱ ${ui.value}`);
                                                                                                                         }}">
-                        <div data-bind="css: {hide: toggled}" id="custom-handle" class="ui-slider-handle"></div>
+                        <div data-bind="css: {hide: toggled}, text: cost_filter" id="custom-handle" class="ui-slider-handle"></div>
                     </div>
                     <div class="filter-buttons flex">
                         <a id="search" href="#" data-bind="click: search_restaurants">Search</a>
